--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "socketServer.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "NODE_ENV=production node app.js",
     "dev": "nodemon socketServer"
   },
   "keywords": [],
