--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "socketServer.js",
   "scripts": {
-    "start": "NODE_ENV=production node socketServer",
+    "start": "NODE_ENV=production node socketServer.js",
     "dev": "nodemon socketServer"
   },
   "keywords": [],
